# pipelines/models/__init__.py
@@ -1,6 +1,7 @@
 from pipelines.models.compare_result import CompareResult
 from pipelines.models.deployment import Deployment
 from pipelines.models.experiment import Experiment
+from pipelines.models.monitoring import Monitoring
 from pipelines.models.operator import Operator
 from pipelines.models.project import Project
 from pipelines.models.task import Task
@@ -9,6 +10,7 @@ from pipelines.models.template import Template
 __all__ = ['CompareResult',
            'Deployment',
            'Experiment',
+           'Monitoring',
            'Operator',
            'Project',
            'Task',
